Added title page to final LRM

--- a/LRM_Draft1.1.tex
+++ b/LRM_Draft1.1.tex
@@ -1,5 +1,4 @@
-\documentclass[12pt]{report}
-
+\documentclass[titlepage, 12pt]{report}
 \usepackage{listings}
 \usepackage{color}
 
@@ -26,7 +25,28 @@
   tabsize=3
 }
 
+
 \begin{document}
+
+\author{
+  Djuraev, Azim\\
+  \texttt{ad3390@columbia.edu}
+  \and
+  Huang, Arick\\
+  \texttt{ah3445@columbia.edu}
+  \and
+  Beckett, Levi\\
+  \texttt{lb3064@columbia.edu}
+  \and
+  Shiers, Jacob\\
+  \texttt{jms2453@columbia.edu}
+}
+
+\title{JTRIX: Language Reference Manual}
+\date{}
+\maketitle
+
+
 \tableofcontents
 
 \chapter{Lexical Conventions}
